# HID_CPP_SigmaBus

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
HID_CPP/: CMakeLists.txt
HID_CPP/Document/: HID_DeviceManager中如何运行的线程写入流程.md  hidapi接口说明.md  框架说明.md
HID_CPP/hidapi/: hidapi.h  hidapi_windows.c
HID_CPP/includes/: CRC.h  HID_CcmEasyEncrypt.h  HID_Device.h  HID_DeviceManager.h  HID_Global.h  HID_Params.h  IHID.h
HID_CPP/src/: CRC.cpp  HID_CcmEasyEncrypt.cpp  HID_Device.cpp  HID_DeviceManager.cpp
